# anthropic-rust-sdk

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
.cursor/skills/update-version/: SKILL.md
.github/workflows/: ci.yml
.plan/: 2.✅同步上游至0.106.0_159fd976.plan.md  anthropic-rust-sdk.plan.md
docs/: ARCHITECTURE.md  COMMITS.md  ROADMAP.md
examples/: messages_create.rs  streaming.rs
src/: client.rs  lib.rs
src/core/: error.rs  middleware.rs  mod.rs  pagination.rs  streaming.rs
src/helpers/: json_schema.rs  mod.rs  webhooks.rs
src/internal/: backoff.rs  headers.rs  mod.rs  sse.rs
src/resources/: completions.rs  mod.rs  models.rs
src/resources/beta/: agents.rs  deployment_runs.rs  deployments.rs  dreams.rs  environments.rs  files.rs  memory_stores.rs  messages.rs  mod.rs  models.rs  sessions.rs  skills.rs  tunnels.rs  user_profiles.rs  vaults.rs  webhooks.rs
src/resources/messages/: batches.rs  mod.rs  types.rs
src/runtime/: message_stream.rs  mod.rs  parser.rs
src/runtime/tools/: beta_tool_runner.rs  mod.rs
tests/: beta_resources_test.rs  client_test.rs  sse_test.rs  webhook_test.rs
